[project]
name = "rag-ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Patricia Cobelli",email = "patycobelli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "chromadb (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
